"""VM: runs."""
class RunsModel:
    def __init__(self) -> None:
        self._runs = []
